Enable accessing polyglot bindings